--- a/gb/17/11/26/n9895751.md
+++ b/gb/17/11/26/n9895751.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/usaite2855/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/usaite2855/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/usaite2855/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/usaite2855/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/usaite2855/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/usaite2855/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/usaite2855/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/usaite2855/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/usaite2855/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/usaite2855/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/usaite2855/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/usaite2855/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/usaite2855/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/usaite2855/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/usaite2855/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/usaite2855/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/usaite2855/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/usaite2855/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/usaite2855/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/usaite2855/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/usaite2855/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/usaite2855/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>移居海外 全球这27个城市安居就业最容易</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/07/1200x1200-600x400.jpg" />
 <h6>全世界大概有2.5亿人是在世界各地流动居住，说明世界人口流动性很大。图为多伦多唐人街。（大纪元）
 </h6>
 <hr>
-	<p>【大纪元2017年11月27日讯】（大纪元记者夏雨编译报导）如果你想在国外生活，想了解哪个国家的哪个城市生活条件合适，最好的咨询对象可能是已经做过同样事情的人：居住在各地的<ahref="https://github.com/usaite2855/djy/blob/master/gb/tag/%E5%A4%96%E7%B1%8D%E4%BA%BA%E5%A3%AB.md#1">外籍人士</a>。一份最新的调查列出全球27个城市，在这些城市生活费用适中，工作机会多，令<ahref="https://github.com/usaite2855/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>和外籍人士感到愉快。</p>
-<p>按照国际<ahref="https://github.com/usaite2855/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>组织，联合国的统计，全世界大概有2.5亿人在世界各地过着移民生活，包括那些不在出生国工作的人，说明世界人口流动性很大。</p>
+	<p>【大纪元2017年11月27日讯】（大纪元记者夏雨编译报导）如果你想在国外生活，想了解哪个国家的哪个城市生活条件合适，最好的咨询对象可能是已经做过同样事情的人：居住在各地的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%96%E7%B1%8D%E4%BA%BA%E5%A3%AB.md#1">外籍人士</a>。一份最新的调查列出全球27个城市，在这些城市生活费用适中，工作机会多，令<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>和外籍人士感到愉快。</p>
+<p>按照国际<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A7%BB%E6%B0%91.md#1">移民</a>组织，联合国的统计，全世界大概有2.5亿人在世界各地过着移民生活，包括那些不在出生国工作的人，说明世界人口流动性很大。</p>
 <p>据“商业内幕”报导，全球最大旅外人士情报网站InterNations最近发布了2017年在国外生活和工作的最佳城市名单。这份名单基于来自对全球40个国家近8000人的调查结果。</p>
 <p>对于每个城市，“商业内幕”根据Numbeo机构的数据，列出了这些城市的生活费用估算。</p>
-<p>为了汇编这些数据，InterNations调查了居住在40个国家的7985名外国人。入榜的城市至少被受访者提及45次。<ahref="https://github.com/usaite2855/djy/blob/master/gb/tag/%E5%9F%8E%E5%B8%82%E6%8E%92%E5%90%8D.md#1">城市排名</a>是根据该城市生活的质量和成本、工作质量和财务状况，以及在该城市居住的便利程度确定的。</p>
+<p>为了汇编这些数据，InterNations调查了居住在40个国家的7985名外国人。入榜的城市至少被受访者提及45次。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9F%8E%E5%B8%82%E6%8E%92%E5%90%8D.md#1">城市排名</a>是根据该城市生活的质量和成本、工作质量和财务状况，以及在该城市居住的便利程度确定的。</p>
 <p>根据Numbeo的数据，排名还考虑到那里的一些生活必需品（和啤酒等）的成本。所有金额均以美元计，截至今年11月份。</p>
 <p>InterNations表示，此次评比出的一些城市出乎人的意外，如排在第一的巴林麦纳麦并非著名城市，但在该市安顿下来很容易，且92%的受访者表示，在该市不懂当地语言不会给生活工作造成难度。排名第二的布拉格在就业方面表现出色，使其在“城市工作生活指数”每个子类别中都排名前十。排名第三的马德里在就业上不够令人满意，但该市的休闲设施、美食和天气受到好评。</p>
-<p>以下是2017年最适合移民和<ahref="https://github.com/usaite2855/djy/blob/master/gb/tag/%E5%A4%96%E7%B1%8D%E4%BA%BA%E5%A3%AB.md#1">外籍人士</a>居住城市的名单。</p>
+<p>以下是2017年最适合移民和<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%96%E7%B1%8D%E4%BA%BA%E5%A3%AB.md#1">外籍人士</a>居住城市的名单。</p>
 <h2>1. 麦纳麦（Manama），巴林（Bahrain）</h2>
 <p>与纽约市相比，生活成本降低42.1%</p>
 <p>租金：市中心一卧居室 940.43</p>
@@ -21,7 +21,7 @@
 <p>通勤费：39.74</p>
 <p>卡布奇诺咖啡：4.59</p>
 <p>国内啤酒消费：9.27</p>
-<figure id="attachment_9895811" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/11/1024px-Vltava_in_Prague.jpg"><img class="size-large wp-image-9895811" src="https://i.epochtimes.com/assets/uploads/2017/11/1024px-Vltava_in_Prague-600x353.jpg" alt="" width="600" b="353" /></a><figcaption class="wp-caption-text">布拉格 (Che/Wiki commons)</figcaption></figure>
+<figure id="attachment_9895811" aria-describedby="caption-attachment-9895811" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/11/1024px-Vltava_in_Prague.jpg"><img class="size-large wp-image-9895811" src="https://i.epochtimes.com/assets/uploads/2017/11/1024px-Vltava_in_Prague-600x353.jpg" alt="" width="600" b="353" /></a><figcaption id="caption-attachment-9895811" class="wp-caption-text">布拉格 (Che/Wiki commons)</figcaption></figure>
 <h2>2. 布拉格（Prague），捷克共和国</h2>
 <p>与纽约市相比，生活成本降低49.5%</p>
 <p>租金：市中心一卧居室 703.08</p>
@@ -29,7 +29,7 @@
 <p>通勤费：25.09</p>
 <p>卡布奇诺咖啡：2.12</p>
 <p>国内啤酒：1.60</p>
-<figure id="attachment_7030883" style="width: 404px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2005/11/511252208291528.jpg"><img class="size-full wp-image-7030883" src="https://i.epochtimes.com/assets/uploads/2005/11/511252208291528.jpg" alt="" width="404" b="594" /></a><figcaption class="wp-caption-text">西班牙马德里南方的Aranjuez，公园内落叶缤纷。(AFP/Getty Images,2005年11月25日)</figcaption></figure>
+<figure id="attachment_7030883" aria-describedby="caption-attachment-7030883" style="width: 404px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2005/11/511252208291528.jpg"><img class="size-full wp-image-7030883" src="https://i.epochtimes.com/assets/uploads/2005/11/511252208291528.jpg" alt="" width="404" b="594" /></a><figcaption id="caption-attachment-7030883" class="wp-caption-text">西班牙马德里南方的Aranjuez，公园内落叶缤纷。(AFP/Getty Images,2005年11月25日)</figcaption></figure>
 <h2>3. 马德里（Madrid），西班牙</h2>
 <p>与纽约市相比，生活成本降低35.2%</p>
 <p>租金：市中心一卧居室 919.92</p>
@@ -44,7 +44,7 @@
 <p>通勤费：29.85</p>
 <p>卡布奇诺咖啡：2.53</p>
 <p>国内啤酒：3.58</p>
-<figure id="attachment_6805684" style="width: 594px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2009/07/907170245102208.jpg"><img class="size-full wp-image-6805684" src="https://i.epochtimes.com/assets/uploads/2009/07/907170245102208.jpg" alt="" width="594" b="399" /></a><figcaption class="wp-caption-text">阿姆斯特丹露天咖啡座。 (Lipnitzki/Roger Viollet/Getty Images)</figcaption></figure>
+<figure id="attachment_6805684" aria-describedby="caption-attachment-6805684" style="width: 594px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2009/07/907170245102208.jpg"><img class="size-full wp-image-6805684" src="https://i.epochtimes.com/assets/uploads/2009/07/907170245102208.jpg" alt="" width="594" b="399" /></a><figcaption id="caption-attachment-6805684" class="wp-caption-text">阿姆斯特丹露天咖啡座。 (Lipnitzki/Roger Viollet/Getty Images)</figcaption></figure>
 <h2>5. 阿姆斯特丹（Amsterdam），荷兰</h2>
 <p>与纽约市相比，生活成本降低16.1%</p>
 <p>租金：市中心的一卧居室1,646.41</p>
@@ -66,7 +66,7 @@
 <p>通勤费：34.50</p>
 <p>卡布奇诺咖啡：1.67</p>
 <p>国内啤酒：2.07</p>
-<figure id="attachment_7156323" style="width: 384px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2004/07/407093459985.jpg"><img class="size-full wp-image-7156323" src="https://i.epochtimes.com/assets/uploads/2004/07/407093459985.jpg" alt="" width="384" b="265" /></a><figcaption class="wp-caption-text">曼谷（法新社图片）</figcaption></figure>
+<figure id="attachment_7156323" aria-describedby="caption-attachment-7156323" style="width: 384px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2004/07/407093459985.jpg"><img class="size-full wp-image-7156323" src="https://i.epochtimes.com/assets/uploads/2004/07/407093459985.jpg" alt="" width="384" b="265" /></a><figcaption id="caption-attachment-7156323" class="wp-caption-text">曼谷（法新社图片）</figcaption></figure>
 <h2>8. 泰国曼谷</h2>
 <p>与纽约市相比，生活成本降低45.8%</p>
 <p>租金：市中心一卧居室636.70</p>
@@ -81,7 +81,7 @@
 <p>通勤费： 80.30</p>
 <p>卡布奇诺咖啡：5.29</p>
 <p>国内啤酒：8.03</p>
-<figure id="attachment_7298033" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/02/1602260122022669.jpg"><img class="size-large wp-image-7298033" src="https://i.epochtimes.com/assets/uploads/2016/02/1602260122022669-600x450.jpg" alt="" width="600" b="450" /></a><figcaption class="wp-caption-text">德国法兰克福 (David Stanley/Flickr)</figcaption></figure>
+<figure id="attachment_7298033" aria-describedby="caption-attachment-7298033" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/02/1602260122022669.jpg"><img class="size-large wp-image-7298033" src="https://i.epochtimes.com/assets/uploads/2016/02/1602260122022669-600x450.jpg" alt="" width="600" b="450" /></a><figcaption id="caption-attachment-7298033" class="wp-caption-text">德国法兰克福 (David Stanley/Flickr)</figcaption></figure>
 <h2>10. 法兰克福，德国</h2>
 <p>与纽约市相比，生活成本降低21.2%</p>
 <p>租金：市中心一卧居室1,059.52</p>
@@ -110,7 +110,7 @@
 <p>通勤费：35.56</p>
 <p>卡布奇诺咖啡：1.51</p>
 <p>国内啤酒：1.68</p>
-<figure id="attachment_7289623" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/02/1602082025502497.jpg"><img class="size-large wp-image-7289623" src="https://i.epochtimes.com/assets/uploads/2016/02/1602082025502497-600x398.jpg" alt="" width="600" b="398" /></a><figcaption class="wp-caption-text">奥克兰地标天空塔（易凡／大纪元）</figcaption></figure>
+<figure id="attachment_7289623" aria-describedby="caption-attachment-7289623" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/02/1602082025502497.jpg"><img class="size-large wp-image-7289623" src="https://i.epochtimes.com/assets/uploads/2016/02/1602082025502497-600x398.jpg" alt="" width="600" b="398" /></a><figcaption id="caption-attachment-7289623" class="wp-caption-text">奥克兰地标天空塔（易凡／大纪元）</figcaption></figure>
 <h2>14. 奥克兰（Auckland），新西兰</h2>
 <p>与纽约市相比，生活成本降低17%</p>
 <p>租金：市中心一卧居室1,208.88</p>
@@ -132,7 +132,7 @@
 <p>通勤费：46.67</p>
 <p>卡布奇诺咖啡：3.71</p>
 <p>国内啤酒：5.83</p>
-<figure id="attachment_6912109" style="width: 594px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2010/03/1003061736331820.jpg"><img class="size-full wp-image-6912109" src="https://i.epochtimes.com/assets/uploads/2010/03/1003061736331820.jpg" alt="" width="594" b="407" /></a><figcaption class="wp-caption-text">图为迪拜棕榈岛上的豪华建筑物。(GETTY IMAGES)</figcaption></figure>
+<figure id="attachment_6912109" aria-describedby="caption-attachment-6912109" style="width: 594px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2010/03/1003061736331820.jpg"><img class="size-full wp-image-6912109" src="https://i.epochtimes.com/assets/uploads/2010/03/1003061736331820.jpg" alt="" width="594" b="407" /></a><figcaption id="caption-attachment-6912109" class="wp-caption-text">图为迪拜棕榈岛上的豪华建筑物。(GETTY IMAGES)</figcaption></figure>
 <h2>17. 迪拜（Dubai），阿联酋</h2>
 <p>与纽约市相比，生活成本降低28%</p>
 <p>租金：市中心一卧居室1,882.28</p>
@@ -161,7 +161,7 @@
 <p>通行费：102.92</p>
 <p>卡布奇诺咖啡：3.34</p>
 <p>国内啤酒： 4.43</p>
-<figure id="attachment_9834354" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/11/171112205127100649.jpg"><img class="size-large wp-image-9834354" src="https://i.epochtimes.com/assets/uploads/2017/11/171112205127100649-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">位于首尔特别市广津区永华寺路145 一带的峨嵯山生态公园和与之相连的华克山庄路边的晚秋（11月中旬）枫景美丽的让人流连忘返。图为峨嵯山生态公园枫景。（全景林／大纪元）</figcaption></figure>
+<figure id="attachment_9834354" aria-describedby="caption-attachment-9834354" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/11/171112205127100649.jpg"><img class="size-large wp-image-9834354" src="https://i.epochtimes.com/assets/uploads/2017/11/171112205127100649-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-9834354" class="wp-caption-text">位于首尔特别市广津区永华寺路145 一带的峨嵯山生态公园和与之相连的华克山庄路边的晚秋（11月中旬）枫景美丽的让人流连忘返。图为峨嵯山生态公园枫景。（全景林／大纪元）</figcaption></figure>
 <h2>21. 首尔（Seoul），韩国</h2>
 <p>与纽约市相比，生活成本降低17%</p>
 <p>租金：市中心一卧居室 824.89</p>
@@ -183,7 +183,7 @@
 <p>通勤费：84.36</p>
 <p>卡布奇诺咖啡：4.93</p>
 <p>国内啤酒：7.03</p>
-<figure id="attachment_7298036" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2016/02/1602260238262669.jpg"><img class="size-large wp-image-7298036" src="https://i.epochtimes.com/assets/uploads/2016/02/1602260238262669-600x399.jpg" alt="" width="600" b="399" /></a><figcaption class="wp-caption-text">德国慕尼黑(JOHN MACDOUGALL/AFP/Getty Images)</figcaption></figure>
+<figure id="attachment_7298036" aria-describedby="caption-attachment-7298036" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/02/1602260238262669.jpg"><img class="size-large wp-image-7298036" src="https://i.epochtimes.com/assets/uploads/2016/02/1602260238262669-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-7298036" class="wp-caption-text">德国慕尼黑(JOHN MACDOUGALL/AFP/Getty Images)</figcaption></figure>
 <h2>24. 慕尼黑（Munich），德国</h2>
 <p>与纽约市相比，生活成本降低21.8%</p>
 <p>租金：市中心一卧居室 1,057.55</p>
@@ -218,36 +218,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/17/11/5/n9807063.md#1">打造友善移民城市 异国美食在嘉飘香</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/17/11/14/n9840543.md#1">世界顶级城市排名出炉 看看卡城排第几？</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/17/11/19/n9865825.md#1">川普当选 美国人才外流加拿大？ 并非如此</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/17/11/21/n9874720.md#1">基隆新住民嘉年华12/3登场  体验各国多元文化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/11/5/n9807063.md#1">打造友善移民城市 异国美食在嘉飘香</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/11/14/n9840543.md#1">世界顶级城市排名出炉 看看卡城排第几？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/11/19/n9865825.md#1">川普当选 美国人才外流加拿大？ 并非如此</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/11/21/n9874720.md#1">基隆新住民嘉年华12/3登场  体验各国多元文化</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/23/n9763033.md#1" target="_blank">林辉：兵仙韩信辉耀历史 中共歪批其“反动”</a></li><li><a href="https://github.com/usaite2855/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/22/n10581061.md#1" target="_blank">法轮功义务传功遍全球 事实亲历揭穿中共诽谤</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10714814.md#1" target="_blank">川普总统在93号航班9·11悼念仪式上的讲话全文</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/27/n7938314.md#1" target="_blank">摆脱10多年严重湿疹的折磨</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/29/n11984729.md#1">从中国进口130万缺陷口罩 荷兰停用并召回</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/29/n11986130.md#1">台湾再增一名中共肺炎死亡患者 年仅40余岁</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/29/n11986123.md#1">英政府因中共隐瞒疫情要清算 或解约华为</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/29/n11985804.md#1">“我是证据”德国富商从中共地狱中幸存（上）</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/29/n11986596.md#1">菲华商富豪染疫去世 华人恐慌 陆严防偷渡</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/28/n11984334.md#1">中国真的零确诊？“黄安躲在台湾”打脸中共</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/30/n11987402.md#1">刘真今火化胞弟送最后一程 辛龙未现身</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/29/n11985885.md#1">灵堂开放最后一天 辛龙难舍爱妻一度掩面痛哭</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/29/n11986242.md#1">亲共避谈台湾防疫奇迹 世卫官员遭杜汶泽痛批</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/29/n11984757.md#1">台魔术师曝隔离出关日 被陈时中“暖举”感动</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/29/n11985219.md#1">大疫下圣母玛利亚现身阿根廷天空？</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/27/n11981662.md#1">【文史】大难前如何避祸 埃及十灾给启示</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/17/n11948074.md#1">古人濒死体验：元神离体游历天国 预知时局</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/29/n11985603.md#1">罗密欧朱丽叶的爱情悲剧与中世纪瘟疫</a></li>
-<li><a href="https://github.com/usaite2855/djy/blob/master/gb/20/3/29/n11985907.md#1">真心忏悔 化解仇家三世索命</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/usaite2855/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/usaite2855/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/26/n9895751.htm">移居海外 全球这27个城市安居就业最容易</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/26/n9895751.htm">移居海外 全球这27个城市安居就业最容易</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/usaite2855/djy/blob/master/gb/17/11/26/n9895751.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/usaite2855/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/usaite2855/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/usaite2855/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/usaite2855/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/usaite2855/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/11/26/n9895751.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
